# media-downloader

./: .gitignore  CMakeLists.txt  GPLv2  LICENSE.txt  README.md  _config.yml  build_arch.sh  build_fedora.sh  build_linux.sh  build_windows.ps1  changelog  cmake_uninstall.cmake.in  index.md
.github/workflow/: MediaDownloader4Windows.yml
.github/workflows/: GitBuildMac.yml  GitBuildMacRelease.yml  GitBuildWindows.yml  GitBuildWindowsRelease.yml  LinuxQt6Git.yml  MediaDownloader4MAC.yml  MediaDownloader4MACRelease.yml  MediaDownloader4Windows.yml  MediaDownloader4WindowsQt6.yml  MediaDownloader4WindowsRelease.yml  PublishHereMacOsArmRelease.yml  PublishHereMacOsIntelRelease.yml  PublishHereWindowsRelease.yml  PublishMacOsRelease.yml  PublishThereMacOsArmGit.yml  PublishThereMacOsArmRelease.yml  PublishThereMacOsIntelGit.yml  PublishThereMacOsIntelRelease.yml  PublishThereWindowsGit.yml  PublishThereWindowsRelease.yml  PublishWindowsRelease.yml  publishMacOsRelease.yml
extensions/: aria2c.json  deno.json  gallery-dl.json  getsauce.json  lux.json  quickjs.json  quickjs_ng.json  safaribooks.json  svtplay-dl.json  wget.json  you-get.json  youtube-dl.json  yt-dlp-aria2c-native.json  yt-dlp-aria2c.json  yt-dlp-ffmpeg.json  yt-dlp-nightly.json  yt-dlp.json  ytdl-patched.json
src/: AwGCUO.json  FnVrwo.json  KCCQMR.json  about.cpp  about.h  appicon.rc  basicdownloader.cpp  basicdownloader.h  batchdownloader.cpp  batchdownloader.h  batchfiledownloader.cpp  batchfiledownloader.h  concurrentdownloadmanager.cpp  concurrentdownloadmanager.h  concurrentdownloadmanager.hpp  configure.cpp  configure.h  context.hpp  directoryEntries.cpp  directoryEntries.h  downloadmanager.cpp  downloadmanager.h  downloadmanager.hpp  engines.cpp  engines.h  engines.h~RF893463.TMP  icon.qrc  library.cpp  library.h  logger.cpp  logger.h  logwindow.cpp  logwindow.h  logwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  media-downloader.appdata.xml  media-downloader.desktop  (+29 more)
src/engines/: aria2c.cpp  aria2c.h  bun.cpp  bun.h  deno.cpp  deno.h  gallery-dl.cpp  gallery-dl.h  generic.cpp  generic.h  getsauce.cpp  getsauce.h  lux.cpp  lux.h  quickjs.cpp  quickjs.h  quickjs_ng.cpp  quickjs_ng.h  safaribooks.cpp  safaribooks.h  svtplay-dl.cpp  svtplay-dl.h  tests.cpp  tests.h  wget.cpp  wget.h  you-get.cpp  you-get.h  youtube-dl.cpp  youtube-dl.h  yt-dlp.cpp  yt-dlp.h
src/flatpak/: HowTo.txt  io.github.mhogomchungu.media-downloader.desktop  io.github.mhogomchungu.media-downloader.json  io.github.mhogomchungu.media-downloader.metainfo.xml  io.github.mhogomchungu.media-downloader.xml  org.mhogomchungu.media-downloader.json  org.mhogomchungu.media_downloader.desktop  org.mhogomchungu.media_downloader.metainfo.xml
src/utils/: miscellaneous.hpp  network_access_manager.hpp  qprocess.hpp  qtimer.hpp  single_instance.hpp  threads.hpp
translations/: ar.qm  ar.ts  bg_BG  bg_BG.qm  bg_BG.ts  de_DE.qm  de_DE.ts  el_GR.qm  el_GR.ts  en_US.ts  es.qm  es.ts  es_ES.qm  es_ES.ts  fr_FR.qm  fr_FR.ts  it_IT.qm  it_IT.ts  ja_JP.qm  ja_JP.ts  ko_KR.qm  ko_KR.ts  nl_NL.qm  nl_NL.ts  pl_PL.qm  pl_PL.ts  pt_BR.qm  pt_BR.ts  ru_RU.qm  ru_RU.ts  sv_SE.qm  sv_SE.ts  tr_TR.qm  tr_TR.ts  uk_UA.qm  uk_UA.ts  zh_CN.qm  zh_CN.ts
